2023-06-22/active_object/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/active_object)
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:68:16
   |
68 |     (*x).v += ((*x).last_v + v) * (t - (*x).last_t) / 2 as f64;
   |                ^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:68:40
   |
68 |     (*x).v += ((*x).last_v + v) * (t - (*x).last_t) / 2 as f64;
   |                                        ^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:68:5
   |
68 |     (*x).v += ((*x).last_v + v) * (t - (*x).last_t) / 2 as f64;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:69:5
   |
69 |     (*x).last_t = t;
   |     ^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:89:5
   |
89 |     (*x).last_t = 0 as f64;
   |     ^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `c2rust_out` (bin "main") due to 5 previous errors
